"Added button to download resume"

--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <a href="./day1.pdf" download>Click here to download</a>
+    <button><a href="./day1.pdf" download>Click here to download</a></button>
     <center><i class="fa fa-user" style="font-size:60px;"></i>
     <h1>Ajin Varghese</h1></center>
     <h4>Summary</h4><hr>
