--- a/user_details/user_details.html
+++ b/user_details/user_details.html
@@ -8,7 +8,7 @@
 <body>
     <center>
         <h1>User registration form </h1>
-    <form name="details" action="feedback.js" method="POST">
+    <form name="details" action="./feedback.html" method="POST">
         <label>Name:-</label>
         <input type="text"><br/>
         <label>Mobile number:-</label>
