Modification in index.html
Added link to updated resume in index.html
Added a file name semantics.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     
 </head>
 <body>
+    <center>
+        <nav>
+            <a href='./semantics.html'>Updated Resume</a>|
+            <a href='./index.html'>Old Resume</a>
+        </nav> 
+    </center>
+    <hr>
     <button><a href="./day1.pdf" download>Click here to download</a></button>
     <center><i class="fa fa-user" style="font-size:60px;"></i>
     <h1>Ajin Varghese</h1></center>
