added article and aside tag
Also added em and strong to the content of aside and article tag

--- a/semantics.html
+++ b/semantics.html
@@ -14,9 +14,9 @@
             <h1>You are viewing the updated Resume with Semantic elements</h1><hr>
             <nav>
                 <a href='./index.html'><-Old Resume</a>|
-                <a href='./index.html'>Link 1</a>|
-                <a href='./index.html'>Link 2</a>|
-                <a href='./index.html'>Link 3</a>|
+                <a href=#>Link 1</a>|
+                <a href=#>Link 2</a>|
+                <a href=#>Link 3</a>|
             </nav> <br>
             <button><a href="./day1.pdf" download>Click here to download</a></button>
         </center><hr>
@@ -67,8 +67,16 @@
         <li>Playing Piano.</li>
     </ul>
     </div>
-    </section>
-    
+    </section><hr>
+    <aside>
+        <p><em>Aside example</em></p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore voluptatibus quidem laudantium, ex recusandae, et illo, libero harum doloribus vero at asperiores consequatur sed reiciendis fuga soluta ipsam incidunt perspiciatis!</p>
+    </aside><hr>
+    <article>
+        <p><strong>Article Tag example</strong></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, ex in excepturi eos cupiditate quisquam officia dolore soluta pariatur distinctio.</p>
+    </article>
+
     <footer style="display: inline;"><hr>
         <center><span>@Ajin Varghese</span><br>
             <span>Email:- ajin.varghese@xyz.com</span><br>
