Added nav bar items and updated with id

--- a/semantics.html
+++ b/semantics.html
@@ -13,25 +13,30 @@
         <center>
             <h1>You are viewing the updated Resume with Semantic elements</h1><hr>
             <nav>
-                <a href='./index.html'><-Old Resume</a>|
-                <a href=#>Link 1</a>|
-                <a href=#>Link 2</a>|
-                <a href=#>Link 3</a>|
+                <a href='./index.html'><--- Old Resume</a>|
+                <a href=#1>Profile</a>|
+                <a href=#2>Summary</a>|
+                <a href=#3>Education</a>|
+                <a href=#4>Programming Skills</a>|
+                <a href=#5>Hobbies</a>|
+
+
             </nav> <br>
             <button><a href="./day1.pdf" download>Click here to download</a></button>
         </center><hr>
     </header>
     <section class="content">
         <div class="profile"><center><i class="fa fa-user" style="font-size:60px;"></i>
-            <h1>Ajin Varghese</h1></center>
+            <h1 id="1">Ajin Varghese</h1>
+        <p>"Trainee Engineer"</p></center>
         </div>
         <div class="summary">
-            <h4>Summary</h4><hr>
+            <h4 id="2">Summary</h4><hr>
             <center><p>"Working as trainee at Contentstack"</p>
             <hr/></center>
         </div>
         <div class="education">
-            <h4>Education:-</h4><hr>
+            <h4 id="3">Education:-</h4><hr>
         <ul>
         <li>B.E(Comps)</li> 
         <ul>
@@ -52,7 +57,7 @@
             </ul><hr/>
         </div>
     <div class="progskills">
-        <h4>Programming Skills:-</h4><hr>
+        <h4 id="4">Programming Skills:-</h4><hr>
     <ol type="1">
         <li>Beginner in C</li>
         <li>Intermediate in Python</li>
@@ -61,7 +66,7 @@
     </ol><hr>
     </div>
     <div class="hobbies">
-        <h4>Hobbies</h4><hr>
+        <h4 id="5">Hobbies</h4><hr>
     <ul>
         <li>Reading books.</li>
         <li>Playing Piano.</li>
