--- a/Profile/index.html
+++ b/Profile/index.html
@@ -53,15 +53,15 @@
               <th>Percentage</th>
             </thead>
             <tr>
-              <td align="center">SSC</td>
+              <td>SSC</td>
               <td align="center">79.40</td>
             </tr>
             <tr>
-              <td align="center">HSC</td>
+              <td>HSC</td>
               <td align="center">70.47</td>
             </tr>
             <tr>
-              <td align="center">B.E(Comps)</td>
+              <td>B.E(Comps)</td>
               <td align="center">7.63</td>
             </tr>
           </table>
