--- a/Profile/index.html
+++ b/Profile/index.html
@@ -161,10 +161,10 @@
     <footer class="footer-section">
       <div class="footer-container">
         <div class="social-icons">
-          <i style="color: white" class="fa fa-twitter"></i>
-          <i style="color: white" class="fa fa-linkedin"></i>
-          <i style="color: white" class="fa fa-google"></i>
-          <i style="color: white" class="fa fa-facebook"></i>
+          <a href="#"><i style="color: white" class="fa fa-twitter"></i></a>
+          <a href="#"> <i style="color: white" class="fa fa-linkedin"></i></a>
+          <a href="#"><i style="color: white" class="fa fa-google"></i></a>
+          <a href="#"> <i style="color: white" class="fa fa-facebook"></i></a>
         </div>
         <p>Copyright @ 2020</p>
         <p>Courtesy By Ajin</p>
