--- a/Profile/index.html
+++ b/Profile/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="navigation-bar">
       <div class="nav-container">
-        <div class="img-logo"><a href="https://ajin998.github.io/Portfolio/landing-page"><img src="./images/logo-dark.png" /></a></div>
+        <div class="img-logo"><a href="https://ajin998.github.io/Portfolio/"><img src="./images/logo-dark.png" /></a></div>
         <div class="nav-list">
           <ul class="nav-item-container">
             <a href="#1"><li class="nav-items">Qualification</li></a>
