--- a/Profile/index.html
+++ b/Profile/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="navigation-bar">
       <div class="nav-container">
-        <div class="img-logo"><a href="https://ajin998.github.io/Portfolio/"><img src="./images/logo-dark.png" /></a></div>
+        <div class="img-logo"><img src="./images/logo-dark.png" /></div>
         <div class="nav-list">
           <ul class="nav-item-container">
             <a href="#1"><li class="nav-items">Qualification</li></a>
@@ -46,11 +46,11 @@
     <section class="education">
       <div class="education-container">
         <h2 id="1">Qualification:</h2>
-        <hr id="qual-hr" />
+        <hr id="qual-hred" />
         <div class="marks-container">
-          <table cellspacing="50">
+          <table cellspacing="20">
             <thead>
-              <th>Education Std</th>
+              <th align="start">Education</th>
               <th>Percentage</th>
             </thead>
             <tr>
@@ -77,7 +77,7 @@
         <hr id="qual-hr" />
         <ul class="hobbie-list">
           <li class="hobbie-items">~ Reading Fictional Books.</li>
-          <li class="hobbie-items">~ Playing Football.</li>
+
           <li class="hobbie-items">~ Playing Piano.</li>
           <li class="hobbie-items">~ Pencil Sketching.</li>
         </ul>
@@ -119,7 +119,7 @@
                   <table>
                     <tr>
                       <td>Bootstrap</td>
-                      <td>🌟🌟🌟🌟🌟</td>
+                      <td>🌟🌟🌟</td>
                     </tr>
                   </table>
                 </td>
